--- a/assets/index.html
+++ b/assets/index.html
@@ -4,14 +4,21 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
+  <title>React Redux Todo App</title>
   <meta name="description" content="React Redux App">
   <meta name="author" content="aZerato">
 
-  <script src="common.js"></script>
+  <script src="lib/jquery.js"></script>
+  <script src="lib/react.js"></script>
+  <script src="lib/react-dom.js"></script>
+  <script src="lib/redux.js"></script>
+  <script src="lib/react-redux.js"></script>
+
 </head>
 
 <body>
 	<div id="root"></div>
+
+  <script src="index.js"></script>
 </body>
 </html>
