Update Readme / add some comments

--- a/assets/index.html
+++ b/assets/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="React Redux App">
   <meta name="author" content="aZerato">
 
+  <!-- libraries -->
   <script src="lib/jquery.js"></script>
   <script src="lib/react.js"></script>
   <script src="lib/react-dom.js"></script>
@@ -17,8 +18,10 @@
 </head>
 
 <body>
+  <!-- main node for your SPA -->
 	<div id="root"></div>
 
+  <!-- load app after your node -->
   <script src="index.js"></script>
 </body>
 </html>
